--- a/JobBoard.Tests/JobBoard.Tests.csproj
+++ b/JobBoard.Tests/JobBoard.Tests.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToDoList\ToDoList.csproj" />  
+    <ProjectReference Include="..\JobBoard\JobBoard.csproj" />  
   </ItemGroup>
 
 </Project>
